--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -153,7 +153,7 @@
                         </div>
                         <div>
                             <p class="font-bold text-sm text-gray-400 uppercase">Location</p>
-                            <p class="font-black">Nairobi, Kenya</p>
+                            <p class="font-black">Cara House, Karen Road<br>Nairobi, Kenya</p>
                         </div>
                     </div>
                 </div>
